Fixing scrollbar and autocomplition

--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,6 @@ body {
         width: 100%;
         height: 100%;
         overflow-y: scroll;
-        padding-right: 17px;
         /* Increase/decrease this value for cross-browser compatibility */
         box-sizing: content-box;
 
@@ -123,7 +122,7 @@ body {
             box-sizing: border-box;
             background-color: #f3f3f3;
             border: 1px solid black;
-            border-radius: 10px 10px 10px 10px;
+            border-radius: 0px 10px 10px 0px;
             color: inherit;
             font: inherit;
             cursor: pointer;
